# PLShell

./: .gitignore  README.md  meson.build
examples/: grammar_2.txt
include/: grammar.hpp  grammar_factory.hpp  ll1_parser.hpp  lr0_item.hpp  shell.hpp  slr1_parser.hpp  state.hpp  symbol_table.hpp
src/: main.cpp
src/parser/: grammar.cpp  ll1_parser.cpp  lr0_item.cpp  slr1_parser.cpp  symbol_table.cpp
src/shell/: shell.cpp
tests/: tests.cpp
